[package]
name = "aes_gcm_proxy_reencryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
rand = "0.8.5"
aead =  "0.5"
generic-array = "0.14.4"
universal-hash = "0.5.1"
hex = "0.4.3"
aes = "0.8"
cipher = "0.4"
ctr = "0.9"
ghash = "0.5.0"
hex-literal = "0.4.1"
subtle = { version = "2", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }